objects/HS_Activity__c.object
<CustomObject>
    <description>Notes and tracking for a HS application by Year and Season</description>
    <fields>
        <fullName>Active_Partner_Email__c</fullName>
        <inlineHelpText>The email address of the charity the YP is volunteering with.</inlineHelpText>
        <label>Active Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Address_of_KO_Venue__c</fullName>
        <formula>if(ispickval(Which_KO__c,&quot;1&quot;),&quot;103 Borough Rd, London SE1 0AA&quot;,
if(ispickval(Which_KO__c,&quot;2&quot;),&quot;103 Borough Rd, London SE1 0AA&quot;,
if(ispickval(Which_KO__c,&quot;3&quot;),&quot;103 Borough Rd, London SE1 0AA&quot;,
if(ispickval(Which_KO__c,&quot;4&quot;),&quot;103 Borough Rd, London SE1 0AA&quot;,
if(ispickval(Which_KO__c,&quot;5&quot;),&quot;103 Borough Rd, London SE1 0AA&quot;,
if(ispickval(Which_KO__c,&quot;6&quot;),&quot;103 Borough Rd, London SE1 0AA&quot;,
if(ispickval(Which_KO__c,&quot;7&quot;),&quot;14 Baylis Road, London, SE1 7AA&quot;,
if(ispickval(Which_KO__c,&quot;8&quot;),&quot;14 Baylis Road, London, SE1 7AA&quot;,
if(ispickval(Which_KO__c,&quot;9&quot;),&quot;14 Baylis Road, London, SE1 7AA&quot;,
if(ispickval(Which_KO__c,&quot;10&quot;),&quot;Paragon House, Boston Manor Road, Brentford, Middlesex TW8 9GA&quot;,
if(ispickval(Which_KO__c,&quot;11&quot;),&quot;Paragon House, Boston Manor Road, Brentford, Middlesex TW8 9GA&quot;,
if(ispickval(Which_KO__c,&quot;12&quot;),&quot;58 Oxford St, Birmingham, B5 5NY&quot;,
if(ispickval(Which_KO__c,&quot;13&quot;),&quot;58 Oxford St, Birmingham, B5 5NY&quot;,
if(ispickval(Which_KO__c,&quot;14&quot;),&quot;58 Oxford St, Birmingham, B5 5NY&quot;,
&quot;No Kick Off chosen&quot;))))))))))))))</formula>
        <label>Address of KO Venue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agree_to_code_of_conduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agree to code of conduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ambassador_Dev_Areas__c</fullName>
        <label>Ambassador Dev Areas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Media skills</fullName>
                </value>
                <value>
                    <fullName>Public speaking</fullName>
                </value>
                <value>
                    <fullName>Peer mentoring</fullName>
                </value>
                <value>
                    <fullName>Event management</fullName>
                </value>
                <value>
                    <fullName>Research skills</fullName>
                </value>
                <value>
                    <fullName>Teaching and training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ambassador_End_Date__c</fullName>
        <label>Ambassador End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ambassador_Interests__c</fullName>
        <label>Ambassador Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Social Media and Marketing</fullName>
                </value>
                <value>
                    <fullName>Meetings with businesses</fullName>
                </value>
                <value>
                    <fullName>Skills workshops</fullName>
                </value>
                <value>
                    <fullName>Focus Groups</fullName>
                </value>
                <value>
                    <fullName>Training HeadStart staff</fullName>
                </value>
                <value>
                    <fullName>Peer Mentoring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ambassador_Start_Date__c</fullName>
        <label>Ambassador Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ambassador__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ambassador</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_Learning_diffuculty__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you have a learning difficulty? For example, dyslexia, dyspraxia.</inlineHelpText>
        <label>Any Learning diffuculty?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_criminal_record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you have a criminal record, police caution or, any other contact with the criminal justice system?</inlineHelpText>
        <label>Any criminal record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_hearing_impariment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you have a hearing impairment?</inlineHelpText>
        <label>Any hearing impariment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_medical_conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you have any medical conditions we need to be aware of? For example, epilepsy, diabetes.</inlineHelpText>
        <label>Any medical conditions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_mental_health_conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you have any mental health conditions we need to be aware of? For example, anxiety.</inlineHelpText>
        <label>Any mental health conditions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_other_relevant_information__c</fullName>
        <inlineHelpText>Is there any other information which you think is relevant?</inlineHelpText>
        <label>Any other relevant information?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Any_physical_disability__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you have restricted mobility or a physical disability?</inlineHelpText>
        <label>Any physical disability?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_special_educational_needs__c</fullName>
        <description>Does the YP have any special educational needs?</description>
        <inlineHelpText>Does the YP have any special educational needs?</inlineHelpText>
        <label>Any special educational needs?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_visual_impairment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you have a visual impairment?</inlineHelpText>
        <label>Any visual impairment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_in_progress_call_made__c</fullName>
        <label>App in progress call made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>App_in_progress_call_outcome__c</fullName>
        <label>App in progress call outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Batch__c</fullName>
        <label>Application Batch:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_wave__c</fullName>
        <formula>Young_Person__r.Wave_started__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned wave</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_at_Interview_Day_confirmed__c</fullName>
        <label>Attendance at Interview Day confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attendance_at_KO_confirmed__c</fullName>
        <label>Attendance at KO confirmed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>16th July 2014</fullName>
                </value>
                <value>
                    <fullName>23rd July 2014</fullName>
                </value>
                <value>
                    <fullName>29th July 2014</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendance_at_Screening_Day_confirmed__c</fullName>
        <label>Attendance at Screening Day confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attendance_at_Welcome_day_confirmed__c</fullName>
        <label>Attendance at Welcome day confirmed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Welcome day 1</fullName>
                </value>
                <value>
                    <fullName>Welcome day 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendance_at_Workshop_2_confirmed__c</fullName>
        <label>Attendance at Workshop 2 confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attendance_at_Workshop_3_confirmed__c</fullName>
        <label>Attendance at Workshop 3 confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attended_KO__c</fullName>
        <label>Attended KO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>16th July 2014</fullName>
                </value>
                <value>
                    <fullName>23rd July 2014</fullName>
                </value>
                <value>
                    <fullName>29th July 2014</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attended_Welcome_day__c</fullName>
        <label>Attended Welcome day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attended_Workshop_2__c</fullName>
        <label>Attended Workshop 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attended_Workshop_3__c</fullName>
        <label>Attended Workshop 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attending_mandatory_info_session__c</fullName>
        <label>Attending mandatory info session</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Baseline_Survey_Completed__c</fullName>
        <label>Baseline Survey Completed</label>
        <summarizedField>HS_Survey__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>HS_Survey__c.HS_Activity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRB_first_aid__c</fullName>
        <label>CRB first aid</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current CRB check</fullName>
                </value>
                <value>
                    <fullName>First aid certificate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CST_called_the_YP__c</fullName>
        <inlineHelpText>Populate this date once Customer Services Team called the YP</inlineHelpText>
        <label>CST called the YP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CST_to_Call_the_YP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick to let the Customer Services Team know that they should call the YP.</inlineHelpText>
        <label>CST to Call the YP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HS_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Attempted__c</fullName>
        <label>Call Attempted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_closed_report_incident__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if the case is closed and you wish to report the incident.</inlineHelpText>
        <label>Case closed, report incident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cold_Call_Made__c</fullName>
        <label>Cold Call Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cold_call_outcome__c</fullName>
        <label>Cold call outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_Placement__c</fullName>
        <label>Confirmed Placement</label>
        <summaryFilterItems>
            <field>HS_Placement__c.Placement_Confirmed_Chosen__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>HS_Placement__c.HS_Activity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Type__c</fullName>
        <formula>Young_Person__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Partner_Selection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Young Person will select the Partner name on the website</inlineHelpText>
        <label>Corporate Partner Selection</label>
        <referenceTo>HS_Corporate_Partner__c</referenceTo>
        <relationshipLabel>HS Activities</relationshipLabel>
        <relationshipName>HS_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Partner__c</fullName>
        <formula>text(Corporate_Partner_Selection__r.Corporate_Partner__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Call_Attempt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick to Count your attempted call</inlineHelpText>
        <label>Count Call Attempt?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_HS_YP_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Once you have selected an Event Day, check this box and save in order to create a &quot;HS YP Attendance&quot; record</inlineHelpText>
        <label>Create HS YP Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Criminal_Record_Info__c</fullName>
        <inlineHelpText>If yes, please provide more information on your criminal record, police caution or, any other contact with the criminal justice system.</inlineHelpText>
        <label>Criminal Record Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DO_NOT_CONTACT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DO NOT CONTACT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Application_Completed__c</fullName>
        <label>Date Application Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_EOI_acknowledgement_email_sent__c</fullName>
        <label>Date EOI acknowledgement email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Final_Interview_Preference_sent__c</fullName>
        <label>Date Final Interview Preference sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HS_Application_form_received__c</fullName>
        <label>Date HS Application form received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HS_Application_pack_reminder_AM__c</fullName>
        <label>Date HS Application pack reminder  (AM)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HS_Application_pack_triggered_AMs__c</fullName>
        <description>Date when the HS Application pack is triggered to send to Associate Mentors</description>
        <inlineHelpText>Date when the HS Application pack is triggered to send to Associate Mentors</inlineHelpText>
        <label>Date HS Application pack triggered (AMs)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HS_EOI_received__c</fullName>
        <label>Date HS EOI received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HS_Job_Started__c</fullName>
        <label>Date HS Job Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HS_application_pack_sent__c</fullName>
        <description>Date HS Application Pack is emailed to YP</description>
        <formula>IF( NOT( ISBLANK( Young_Person__r.Date_HS_Application_pack_triggered__c ) ) ,  Young_Person__r.Date_HS_Application_pack_triggered__c ,  IF( NOT( ISBLANK( Date_HS_Application_pack_triggered_AMs__c ) ) ,  Date_HS_Application_pack_triggered_AMs__c , Null) )</formula>
        <label>Date HS application pack sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Hours_Verification_Email_Sent__c</fullName>
        <inlineHelpText>The date when you sent the verification questionnaire to the charity partner.</inlineHelpText>
        <label>Date Hours Verification Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Kick_off_invitation_sent__c</fullName>
        <label>Date Kick off invitation sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Late_Application_Email_Sent__c</fullName>
        <label>Date Late Application Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Partner_capacity_confirmed__c</fullName>
        <formula>Volunteering_Placement__r.Date_Partner_capacity_confirmed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Partner capacity confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Survey_Sent__c</fullName>
        <label>Date Survey Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Travel_Bursary_requested__c</fullName>
        <label>Date Travel Bursary requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Welcome_Day_email_sent__c</fullName>
        <label>Date Welcome Day email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_of_KO__c</fullName>
        <formula>if(ispickval(Which_KO__c,&quot;1&quot;),&quot;Saturday 24th October, 9:30am-12:15pm&quot;,
if(ispickval(Which_KO__c,&quot;2&quot;),&quot;Saturday 24th October, 12:30-3:15pm&quot;,
if(ispickval(Which_KO__c,&quot;3&quot;),&quot;Saturday 24th October, 3:30-6:15pm&quot;,
if(ispickval(Which_KO__c,&quot;4&quot;),&quot;Monday 26th October, 9:30am-12:15pm&quot;,
if(ispickval(Which_KO__c,&quot;5&quot;),&quot;Monday 26th October, 12:30pm-3:15pm&quot;,
if(ispickval(Which_KO__c,&quot;6&quot;),&quot;Monday 26th October, 3:30pm - 6:15pm&quot;,
if(ispickval(Which_KO__c,&quot;7&quot;),&quot;Saturday 24th October, 9:30am - 12:15pm&quot;,
if(ispickval(Which_KO__c,&quot;8&quot;),&quot;Saturday 24th October, 12:30 - 3:15pm&quot;,
if(ispickval(Which_KO__c,&quot;9&quot;),&quot;Saturday 24th October, 3:30 - 6:15pm&quot;,
if(ispickval(Which_KO__c,&quot;10&quot;),&quot;Monday 26th October, 10:30am - 1:15pm&quot;,
if(ispickval(Which_KO__c,&quot;11&quot;),&quot;Monday 26th October, 1:30pm - 4:15pm&quot;,
if(ispickval(Which_KO__c,&quot;12&quot;),&quot;Saturday 24th October, 1pm - 4pm&quot;,
if(ispickval(Which_KO__c,&quot;13&quot;),&quot;Monday 26th October, 9:30am - 12:30pm&quot;,
if(ispickval(Which_KO__c,&quot;14&quot;),&quot;Monday 26th October, 1:30pm - 3:30pm&quot;,
&quot;No Kick Off chosen&quot;))))))))))))))</formula>
        <label>Date and Time of KO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_attended_interview__c</fullName>
        <label>Date attended interview:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_called__c</fullName>
        <label>Date called</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_congratulations_email_sent__c</fullName>
        <label>Date congratulations email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_F2F__c</fullName>
        <label>Date of F2F</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_HS_withdrawal_notification__c</fullName>
        <description>Date YP indicates they wish to withdraw from HS.  Generally given a week to reconsider and then HS to call to check status</description>
        <inlineHelpText>Date YP indicates they wish to withdraw from HS.  Generally given a week to reconsider and then HS to call to check status.  If YP still wants to withdraw, fill in the field Withdrawal confirmed by HS Team</inlineHelpText>
        <label>Date of HS withdrawal notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_initial_marketing__c</fullName>
        <label>Date of initial marketing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_own_placement_confirmation_sent__c</fullName>
        <label>Date own placement confirmation sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_volunteer_placement_email_sent__c</fullName>
        <label>Date volunteer placement email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details_of_special_educational_needs__c</fullName>
        <label>Details of special educational needs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Directions_to_welcome_day__c</fullName>
        <formula>IF( ISPICKVAL( Invite_to_which_welcome_day__c , &quot;1&quot;) ,  Volunteering_Placement__r.Directions_to_welcome_day_1__c ,
IF( ISPICKVAL( Invite_to_which_welcome_day__c , &quot;2&quot;) , Volunteering_Placement__r.Directions_to_welcome_day_2__c,
IF( ISPICKVAL( Invite_to_which_welcome_day__c , &quot;3&quot;) , Volunteering_Placement__r.Directions_to_Welcome_Day_3__c,
IF( ISPICKVAL( Invite_to_which_welcome_day__c , &quot;4&quot;) , Volunteering_Placement__r.Directions_to_Welcome_Day_4__c,&quot;No Welcome Day Chosen&quot;))))</formula>
        <label>Directions to welcome day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <formula>Young_Person__r.District__c</formula>
        <label>District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOI_HS_Cluster__c</fullName>
        <label>EOI HS Cluster</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_or_employment_status__c</fullName>
        <label>Education or employment status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Studying at 6th form</fullName>
                </value>
                <value>
                    <fullName>Studying at a further education college</fullName>
                </value>
                <value>
                    <fullName>Working at or starting an apprenticeship</fullName>
                </value>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>White British</fullName>
                </value>
                <value>
                    <fullName>Irish</fullName>
                </value>
                <value>
                    <fullName>Traveller of Irish heritage</fullName>
                </value>
                <value>
                    <fullName>Gypsy/ Roma</fullName>
                </value>
                <value>
                    <fullName>Any other White background</fullName>
                </value>
                <value>
                    <fullName>White and Black Caribbean</fullName>
                </value>
                <value>
                    <fullName>White and Black African</fullName>
                </value>
                <value>
                    <fullName>White and Asian</fullName>
                </value>
                <value>
                    <fullName>Any other Mixed background</fullName>
                </value>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Pakistani</fullName>
                </value>
                <value>
                    <fullName>Bangladeshi</fullName>
                </value>
                <value>
                    <fullName>Any other Asian background</fullName>
                </value>
                <value>
                    <fullName>Black Caribbean</fullName>
                </value>
                <value>
                    <fullName>Black African</fullName>
                </value>
                <value>
                    <fullName>Any other Black background</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
                <value>
                    <fullName>Any other ethnic group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Day_Select__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the event you would like to create a HS YP Attendance to</inlineHelpText>
        <label>Event Day Select</label>
        <referenceTo>HS_Event_Day__c</referenceTo>
        <relationshipLabel>HS Activities</relationshipLabel>
        <relationshipName>HS_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FOVO_Default_Vol_Opp__c</fullName>
        <defaultValue>&quot;a0rC000000DLryC&quot;</defaultValue>
        <label>FOVO Default Vol. Opp.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Faith_Religion__c</fullName>
        <label>Faith/Religion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Buddhist</fullName>
                </value>
                <value>
                    <fullName>Hindu</fullName>
                </value>
                <value>
                    <fullName>Sikh</fullName>
                </value>
                <value>
                    <fullName>Jewish</fullName>
                </value>
                <value>
                    <fullName>Muslim</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Employer_choice__c</fullName>
        <label>Final employer choice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Look</fullName>
                </value>
                <value>
                    <fullName>Starbucks</fullName>
                </value>
                <value>
                    <fullName>Lloyds</fullName>
                </value>
                <value>
                    <fullName>Berkeley Group</fullName>
                </value>
                <value>
                    <fullName>Zendesk</fullName>
                </value>
                <value>
                    <fullName>GLA</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t want an interview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Find_own_volunteering_opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Find own volunteering opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Choice_Placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Choice Placement</label>
        <referenceTo>Volunteering_Opportunity__c</referenceTo>
        <relationshipLabel>HS Activities (First Choice)</relationshipLabel>
        <relationshipName>HS_Activities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_day_absentee_call_made__c</fullName>
        <label>First day absentee call made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_day_absentee_call_outcome__c</fullName>
        <label>First day absentee call outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rearrange</fullName>
                </value>
                <value>
                    <fullName>Change pertner</fullName>
                </value>
                <value>
                    <fullName>Move to FOVO</fullName>
                </value>
                <value>
                    <fullName>Withdraw</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_day_reminder_call_made__c</fullName>
        <label>First day reminder call made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_day_reminder_call_outcome__c</fullName>
        <label>First day reminder call outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Focus_Group_Email_Sent__c</fullName>
        <inlineHelpText>Temp Field</inlineHelpText>
        <label>Focus Group Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generic_Sub_categories__c</fullName>
        <inlineHelpText>Choose category of your generic email.</inlineHelpText>
        <label>Generic Sub-categories</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kick Off Emails</fullName>
                </value>
                <value>
                    <fullName>Placements &amp; General Updates</fullName>
                </value>
                <value>
                    <fullName>Surveys</fullName>
                </value>
                <value>
                    <fullName>Workshop Invitations</fullName>
                </value>
                <value>
                    <fullName>Interviews</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generic_email_sent__c</fullName>
        <inlineHelpText>Temp date field to show when &lt;generic&gt; email was sent</inlineHelpText>
        <label>[Generic] email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HOLD_Comms__c</fullName>
        <label>HOLD Comms</label>
        <type>Date</type>
    </fields>
</CustomObject>